Update gambar, video, dan style

--- a/index.html
+++ b/index.html
@@ -4,49 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TK AL-KAMAL SARANG BANGO</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Poppins', sans-serif; line-height: 1.6; background: #f9fafb; color: #333; }
-    a { text-decoration: none; }
 
-    header { position: sticky; top: 0; background: #1e8f4f; z-index: 1000; }
-    .nav { max-width: 1200px; margin: auto; padding: 15px 20px; display: flex; justify-content: space-between; align-items: center; }
-    .nav h1 { color: #fff; font-size: 20px; }
-    .nav ul { list-style: none; display: flex; gap: 20px; }
-    .nav ul li a { color: #fff; font-weight: 500; }
-
-    .hero { background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url('https://images.unsplash.com/photo-1604881991720-f91add269bed'); background-size: cover; background-position: center; height: 85vh; display: flex; align-items: center; }
-    .hero-content { max-width: 1200px; margin: auto; padding: 20px; color: #fff; }
-
-    section { padding: 70px 20px; }
-    .container { max-width: 1200px; margin: auto; }
-    .title { text-align: center; margin-bottom: 40px; }
-    .title h3 { font-size: 32px; color: #1e8f4f; }
-
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 25px; }
-    .card { background: #fff; padding: 25px; border-radius: 15px; box-shadow: 0 10px 25px rgba(0,0,0,.05); text-align: center; }
-
-    .ppdb { background: #e8f5ee; border-radius: 20px; padding: 40px; text-align: center; }
-    .ppdb h4 { font-size: 26px; color: #1e8f4f; margin-bottom: 15px; }
-
-    .wa-float {
-      position: fixed;
-      bottom: 25px;
-      right: 25px;
-      background: #25D366;
-      color: #fff;
-      padding: 14px 20px;
-      border-radius: 50px;
-      font-weight: 600;
-      box-shadow: 0 8px 20px rgba(0,0,0,.2);
-      z-index: 9999;
-    }
-
-    footer { background: #1e8f4f; color: #fff; padding: 30px 20px; text-align: center; }
-</style>
 </head>
 <body>
 
@@ -58,6 +20,7 @@
       <li><a href="#profil">Profil</a></li>
       <li><a href="#program">Program</a></li>
       <li><a href="#galeri">Galeri</a></li>
+      <li><a href="#Tujuan">Tujuan</a></li>
       <li><a href="#kontak">Kontak</a></li>
     </ul>
   </div>
@@ -68,22 +31,28 @@
 
 <section class="hero" id="beranda">
   <div class="hero-content">
-    <h2>TK AL-KAMAL SARANG BANGO</h2>
-    <p>Penerimaan Peserta Didik Baru<br><strong>Tahun Ajaran 2025 / 2026</strong></p>
+    <h1>TK AL-KAMAL SARANG BANGO</h1>
+    <h2>Penerimaan Peserta Didik Baru<br><strong>Tahun Ajaran 2025 / 2026</strong></h2>
     <a href="#kontak" class="btn">Daftar Sekarang</a>
   </div>
 </section>
 
 <section id="profil">
   <div class="container">
-    <div class="title"><h3>Profil Sekolah</h3></div>
-    <p style="text-align:center; max-width:800px; margin:auto;">TK AL-KAMAL SARANG BANGO adalah lembaga pendidikan anak usia dini yang berfokus pada pembentukan karakter, kecerdasan, dan nilai-nilai Islami sejak dini.</p>
+    <div class="title"><h1>Profil Sekolah</h1></div>
+    <p style="text-align:center; max-width:800px; margin:auto;">TK Al Kamal adalah lembaga pendidikan anak usia dini yang berkomitmen memberikan pendidikan terbaik bagi generasi emas melalui pembelajaran yang ceria, aman, dan berlandaskan nilai-nilai Islami. Kami percaya bahwa setiap anak adalah anugerah yang memiliki potensi unik yang perlu dikembangkan sejak dini dengan penuh kasih sayang.
+
+Dengan tenaga pendidik yang berpengalaman, sabar, dan profesional, TK Al Kamal menghadirkan lingkungan belajar yang mendukung tumbuh kembang anak secara holistik, meliputi perkembangan kognitif, motorik, bahasa, sosial-emosional, serta pembentukan akhlak mulia.
+
+Proses pembelajaran di TK Al Kamal dirancang secara aktif, kreatif, dan menyenangkan, melalui kegiatan bermain sambil belajar, pembiasaan ibadah, pengenalan Al-Qur’an, serta penanaman nilai-nilai disiplin, kemandirian, dan kepedulian terhadap sesama. Anak-anak dibimbing untuk tumbuh menjadi pribadi yang cerdas, percaya diri, berakhlak baik, dan siap melanjutkan pendidikan ke jenjang berikutnya.
+
+Didukung dengan lingkungan sekolah yang aman, nyaman, dan ramah anak, serta kerja sama yang baik dengan orang tua, TK Al Kamal menjadi pilihan tepat bagi Ayah dan Bunda yang menginginkan pendidikan awal terbaik untuk putra-putrinya.</p>
   </div>
 </section>
 
 <section id="program">
   <div class="container">
-    <div class="title"><h3>Program Unggulan</h3></div>
+    <div class="title"><h1>Program Unggulan</h1></div>
     <div class="grid">
       <div class="card">Pendidikan Islami & Akhlak Mulia</div>
       <div class="card">Tahfidz & Doa Harian</div>
@@ -93,56 +62,75 @@
   </div>
 </section>
 
-<section id="ppdb">
-  <div class="container">
-    <div class="ppdb">
-      <h4>Penerimaan Peserta Didik Baru</h4>
-      <p><strong>Tahun Ajaran 2025 / 2026</strong></p>
-      <p>Silakan isi formulir pendaftaran online atau hubungi kami melalui WhatsApp.</p>
-      <br>
-      <form action="https://docs.google.com/forms/d/e/FORM_ID/viewform" target="_blank">
-        <button class="btn">Isi Formulir Pendaftaran</button>
-      </form>
+    <!-- <section id="ppdb">
+    <div class="container">
+        <div class="ppdb">
+        <h4>Penerimaan Peserta Didik Baru</h4>
+        <p><strong>Tahun Ajaran 2025 / 2026</strong></p>
+        <p>Silakan isi formulir pendaftaran online atau hubungi kami melalui WhatsApp.</p>
+        <br>
+        <form action="https://docs.google.com/forms/d/e/FORM_ID/viewform" target="_blank">
+            <button class="btn">Isi Formulir Pendaftaran</button>
+        </form>
+        </div>
     </div>
-  </div>
-</section>
+    </section> -->
 
 <section id="galeri">
   <div class="container">
-    <div class="title"><h3>Galeri Kegiatan Siswa</h3></div>
+    <div class="title"><h1>Galeri Kegiatan Siswa</h1></div>
 <div class="grid gallery">
   <div class="gallery-item">
     <img src="img/kegiatan-1.jpeg" alt="Kegiatan Belajar" onclick="openModal(this)">
-    <p>Kegiatan Belajar di Kelas</p>
-  </div>
-
-  <div class="gallery-item">
-    <img src="img/kegiatan-2.jpeg" alt="Senam Pagi" onclick="openModal(this)">
     <p>Senam Pagi Bersama</p>
   </div>
 
   <div class="gallery-item">
+    <img src="img/kegiatan-2.jpeg" alt="Senam Pagi" onclick="openModal(this)">
+    <p>Kegiatan Bercocok Tanam</p>
+  </div>
+
+  <div class="gallery-item">
     <img src="img/kegiatan-3.jpeg" alt="Manasik Haji" onclick="openModal(this)">
-    <p>Manasik Haji</p>
+    <p>Melestarikan Tumbuhan</p>
   </div>
 
   <div class="gallery-item">
     <img src="img/kegiatan-4.jpeg" alt="Menanam Tanaman" onclick="openModal(this)">
-    <p>Kegiatan Menanam</p>
+    <p>Manasik Haji</p>
+  </div>
+
+   <div class="gallery-item">
+  <video src="vidio/0108.mp4    " alt="Market Day" class="video-wrapper" autoplay muted></video>
+    <p>Shoping Day</p>
   </div>
 
   <div class="gallery-item">
-    <img src="img/kegiatan-5.jpeg" alt="Foto Bersama" onclick="openModal(this)">
-    <p>Foto Bersama Guru & Siswa</p>
+    <img src="img/wisuda kayyis.jpg" alt="Foto Bersama" onclick="openModal(this)">
+    <p>WISUDA TK-ALKAMAL</p>
   </div>
 </div>
 
   </div>
 </section>
 
+<section id="Tujuan">
+ <div class="container">
+    <div class="ppdb">
+      <h1 style="color: rgb(8, 245, 8);">🌟 Mengapa Memilih TK Al Kamal?</h1>
+      <!-- <p><strong>Tahun Ajaran 2025 / 2026</strong></p> -->
+      <p>• Pembelajaran Islami, ceria, dan menyenangkan</p>
+      <p>• Guru kompeten, peduli, dan penuh kasih</p>
+      <p>• Fokus pada akhlak, karakter, dan kemandirian anak</p>
+      <p>• Lingkungan belajar aman & ramah anak</p>
+      <p>• Pendampingan tumbuh kembang anak secara optimal</p>
+    </div>
+  </div>
+  </section>
+
 <section id="kontak">
   <div class="container">
-    <div class="title"><h3>Kontak Resmi Sekolah</h3></div>
+    <div class="title"><h1>Kontak Resmi Sekolah</h1></div>
     <p style="text-align:center; line-height:1.9;">
       📍 Jl. Marunda Gg. 1 No.16, Sarang Bango, Jakarta Utara<br>
       📞 WhatsApp: <strong>0813-8551-3982</strong> | <strong>0877-2911-7309</strong><br>
