--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>TK AL-KAMAL</h1>
     <ul>
       <li><a href="#beranda">Beranda</a></li>
-      <li><a href="#profil">Profil</a></li>
+      <li><a href="#profil">Profil</a></li>g
       <li><a href="#program">Program</a></li>
       <li><a href="#galeri">Galeri</a></li>
       <li><a href="#Tujuan">Tujuan</a></li>
