--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>TK AL-KAMAL</h1>
     <ul>
       <li><a href="#beranda">Beranda</a></li>
-      <li><a href="#profil">Profil</a></li>g
+      <li><a href="#profil">Profil</a></li>
       <li><a href="#program">Program</a></li>
       <li><a href="#galeri">Galeri</a></li>
       <li><a href="#Tujuan">Tujuan</a></li>
@@ -91,18 +91,18 @@ Didukung dengan lingkungan sekolah yang aman, nyaman, dan ramah anak, serta kerj
   </div>
 
   <div class="gallery-item">
-    <img src="img/kegiatan-3.jpeg" alt="Manasik Haji" onclick="openModal(this)">
-    <p>Melestarikan Tumbuhan</p>
-  </div>
-
-  <div class="gallery-item">
-    <img src="img/kegiatan-4.jpeg" alt="Menanam Tanaman" onclick="openModal(this)">
+    <img src="img/kegiatan-4.jpeg" alt="Manasik Haji" onclick="openModal(this)">
     <p>Manasik Haji</p>
   </div>
 
-   <div class="gallery-item">
-  <video src="vidio/0108.mp4    " alt="Market Day" class="video-wrapper" autoplay muted></video>
+  <div class="gallery-item">
+    <video src="vidio/0108.mp4    " alt="Market Day" class="video-wrapper" autoplay muted></video>
     <p>Shoping Day</p>
+  </div>
+
+   <div class="gallery-item">
+  <img src="img/PPDM NEW 2.jpeg" alt="Menanam Tanaman" onclick="openModal(this)">
+    <p>PPDB Periode 2026-2027</p>
   </div>
 
   <div class="gallery-item">
